--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,52 @@
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 main {
-    flex-grow: 1;
+  flex-grow: 1;
+}
+
+table,
+table tbody,
+table tbody tr,
+table tbody tr td,
+table tbody tr th {
+  background-color: rgba(0, 0, 0, 0.1) !important;
+  color: #ffffff !important; /* Ajusta el color para contraste */
+}
+table thead,
+table thead tr,
+table thead tr th {
+  background-color: rgba(0, 0, 0, 0.3) !important;
+}
+header {
+  background-color: rgba(0, 0, 0, 0.1) !important;
+}
+footer {
+  background-color: rgba(0, 0, 0, 0.8) !important;
+}
+
+.bg-img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+}
+
+header,
+nav,
+main,
+footer,
+.modal-content {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.tamanio {
+  height: 40px;
+  width: auto;
 }
