--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,16 @@ main {
   background-color: rgba(0, 0, 0, 0.1) !important;
   border: none; /* Opcional: si no quieres el borde */
 }
+
+.contenedorPadre {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contenedorHijo {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  height: 70%;
+  width: 70%;
+}
